--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skeleton-nestjs",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "simple nest skeleton",
   "author": "Abel Jean Pool Seminatio <aseminario@zerveros.com>",
   "private": true,
@@ -48,11 +48,24 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.4",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.20.0",
+    "@types/uuid": "^10.0.0",
     "eslint-plugin-header": "^3.1.1",
+    "jwks-rsa": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "resend": "^4.0.0",
+    "rxjs": "^7.8.1",
+    "uuid": "^10.0.0",
+    "uuid-validate": "^0.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
@@ -63,7 +76,9 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
+    "@types/uuid-validate": "^0.0.3",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.57.1",
@@ -74,6 +89,7 @@
     "jest": "^29.7.0",
     "npm": "10.9.0",
     "prettier": "3.3.3",
+    "prisma": "^5.20.0",
     "source-map-support": "^0.5.21",
     "standard-version": "^9.5.0",
     "supertest": "^7.0.0",
